Inherit the tree, form, and search view of mail.activity create a new field in mail.activity: favorite create a menuitem root

--- a/mail_extend/views/crm_lead.xml
+++ b/mail_extend/views/crm_lead.xml
@@ -12,6 +12,16 @@
                     </page>
                 </xpath>
             </field>
-        </record>    
+        </record>
+
+        <!--menuitem
+            id="mail_activity_fav_menu"
+            name="Favorite Activities"
+            action="mms.mms_movie_view_tree"
+            parent="crm_menu_root"
+            sequence="1"
+            /-->    
+
     </data>
+    
 </odoo>
