--- a/mail_extended/views/menu_views.xml
+++ b/mail_extended/views/menu_views.xml
@@ -3,5 +3,11 @@
     <data>
         <menuitem name="Activities Pipeline" id="mail_extended_activity_menu"
             action="mail_extended_activity_action" sequence="1" />
+            <menuitem
+                id="model_name_menu"
+                name="name"
+                parent="crm.crm_menu_root"
+                action="mail_extended_activity_action"
+                sequence="10"/>
     </data>
 </odoo>
