finish the sale_extended module

--- a/sale_extended/views/sale_extended_client_type_view.xml
+++ b/sale_extended/views/sale_extended_client_type_view.xml
@@ -15,6 +15,7 @@
                         <group>
                             <field name="name" />
                             <field name="description" />
+                            <field name="discounts" />
                         </group>
                         <notebook>
                             <page name="product_discount_page" string="Products with discount">
