Remove non-functional controllers folder Change module name in manifest from "Sale Extended" to "Contact type module" Rename class in models/sale_extended_client_type.py from ProductMod to ContactType Modify line 19 in models/sale_extended_client_type.py to add "No discounts" to display_name if a record has no discounts Rename field amount_to_discount to to_discount in sales_extended.product_discounted model

--- a/sale_extended/views/sale_extended_client_type_view.xml
+++ b/sale_extended/views/sale_extended_client_type_view.xml
@@ -26,6 +26,15 @@
                 </form>
             </field>
         </record>
+        <record id="sale_extended.client_type_tree" model="ir.ui.view">
+            <field name="name">sale_extended.client_type.tree</field>
+            <field name="model">sale_extended.client_type</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="display_name" string="Client type" />
+                </tree>
+            </field>
+        </record>
         
     </data>
 </odoo>
