--- a/sale_extended/views/sale_extended_product_discounted.xml
+++ b/sale_extended/views/sale_extended_product_discounted.xml
@@ -11,7 +11,7 @@
             <field name="model">sale_extended.product_discounted</field>
             <field name="arch" type="xml">
                 <tree string="Prodcut Discounted">
-                    <field name="amount_to_discount" />
+                    <field name="to_discount" />
                     <field name="product_id" />
                 </tree>
             </field>
@@ -24,7 +24,7 @@
                     <sheet>
                         <group>
                             <field name="product_id" />
-                            <field name="amount_to_discount" />    
+                            <field name="to_discount" />    
                         </group>
                     </sheet>
                 </form>
