--- a/purchase_extended/views/purchase_order.xml
+++ b/purchase_extended/views/purchase_order.xml
@@ -7,7 +7,10 @@
             <field name="inherit_id" ref="purchase.purchase_order_form" />
             <field name="arch" type="xml">
                 <xpath expr='//field[@name="currency_id"]' position="after">
-                    <field name="delete_in" />
+                    <field name="can_delete_after" />
+                    <field name="visible_order" attrs="{'invisible': [('state', '!=', 'purchase')]}" />
+                    <field name="order_url" attrs="{'invisible': [('visible_order', '!=', True)]}"
+                        widget="url" />
                 </xpath>
             </field>
         </record>
