[IMP] helpdesk_mgmt: Extend functionalities and improve ticket creation
- Extend `HelpdeskTicketController`:
  - Add `ExtendedHelpdeskTicketController`.
  - Enhance `/new/ticket` endpoint and form submission functionalities.
  - Improve form:
    - Add paragraph with a link for users to suggest a new ticket category.
    - Add paragraph informing users that the description must be at least 15 characters long.
    - Add error message display for short descriptions on form submission.
  - Extend `create_new_ticket` and `submit_ticket` methods to validate description length and return an error message if it is less than 15 characters.

- Extend `helpdesk.category.sug` model:
  - Rename `helpdesk_category_sug.py` to `main.py`.
  - Add new fields:
    - `user_tickets_ids` (One2many) to display all tickets suggested by the user.
    - `user_email` (Char) to locate the user and show their tickets in `user_tickets_ids`.
  - Add `_compute_user_tickets` method to assign all `helpdesk.ticket` records submitted by the user to `user_tickets_ids`.
  - Add `_compute_display_name` method to modify `display_name` based on the value of `rec.added`.
  - Create a tree view to display `display_name` and `user_tickets_ids`.

- Extend `helpdesk.ticket` model:
  - Add `suggestion_id` (Many2one) to use as `inverse_name` in `user_tickets_ids`.

- Update menu:
  - Modify `menuitem` to appear under the Helpdesk configuration section instead of the root.

--- a/helpdesk_extended/views/helpdesk_category_sug.xml
+++ b/helpdesk_extended/views/helpdesk_category_sug.xml
@@ -33,8 +33,23 @@
                             <field name="editable" />
                             <field name="added" />
                         </group>
+                        <notebook>
+                            <page name="user_tickets_page">
+                                <field name="user_tickets_ids" />
+                            </page>
+                        </notebook>
                     </sheet>
                 </form>
+            </field>
+        </record>
+        <record id="helpdesk_category_sug_tree" model="ir.ui.view">
+            <field name="name">helpdesk.category.sug.tree</field>
+            <field name="model">helpdesk.category.sug</field>
+            <field name="arch" type="xml">
+                <tree create="false">
+                    <field name="display_name" string="Name and status" />
+                    <field name="user_tickets_ids" />
+                </tree>
             </field>
         </record>
     </data>
