Separate controllers, update helpdesk.category.sug model, and create inventory_extended module
- Separated controllers from main.py into two files:
  - `cattegory_suggest.py`: controller for the form to suggest new categories
  - `create_tickets.py`: extension of the HelpDeskTicketController

- Updated the model 'helpdesk.category.sug' (views/helpdesk_category_sug.py):
  - Renamed field `added` to `added_to_categories`

- Modified the template for suggesting new categories (views/categoy_sug_form_template.xml):
  - Improved the form appearance for better user experience

- Enhanced the template with id 'suggestion_sended' (views/category_sug_sended_template.xml):
  - Added line breaks for a more pleasant view

- Updated the tree view of the model 'helpdesk.category.sug':
  - Included the description of the suggested category and the user who made the request

- Created the new module `inventory_extended`

--- a/helpdesk_extended/views/category_sug_form_template.xml
+++ b/helpdesk_extended/views/category_sug_form_template.xml
@@ -6,19 +6,23 @@
                 <br />
                 <div class="container text-center">
                     <center>
+                        <br />
                         <form method="post" action="/category_suggest/send">
                             <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
                             <div class="form-group">
-                                <label>Your suggestion for category</label>
-                                <input type="text" name="suggestion" class="form-control" required="true"/>
+                                <label><h3>Your suggestion for category</h3></label>
+                                <input type="text" name="suggestion" class="form-control" required="true" placeholder="New category name"/>
                                 <small class="form-text text-muted">Insert your category suggest</small>
                             </div>
+                            <br/>
                             <div class="form-group">
-                                <label>Category description</label>
-                                <textarea class="form-control" name="description" required="true"></textarea>
+                                <label><h4>Category description</h4></label>
+                                <textarea class="form-control" name="description" required="true" placeholder="Description of your category"></textarea>
                             </div>
+                            <br />
                             <button type="submit" class="btn btn-primary">Suggest</button>
                         </form>
+                        <br/><br/>
                     </center>
                 </div>
             </t>
