Refactor inventory_extended and enhance Telegram bot functionality
Changes in inventory_extended module:
- Remove 'details' field
- Rename 'invt_external_mgmt' folder to 'invt_telegram_adjustment'

Changes in Telegram bot:
- Add function to send product image with /product command
- Add /adj command to adjust inventory from Telegram if the product exists in the inventory adjustment model
- Change Odoo database URL to an environment variable
- Switch product search from 'product.template' to 'product.product' model
- Modify list_products method to sort products alphabetically by name
- Update list_products to show only id, display_name, and qty_available
- Enhance product_details method to display more product information
- Create get_image method to return product image URL
- Develop adjust_inventory method to adjust inventory for a specified product and quantity, validating the product in the stock.quant model first

--- a/inventory_extended/views/product_template.xml
+++ b/inventory_extended/views/product_template.xml
@@ -7,7 +7,7 @@
             <field name="inherit_id" ref="product.product_template_only_form_view" />
             <field name="arch" type="xml">
                 <xpath expr="(//header)[1]" position="inside">
-                    <button string="Generate Price" name="%(inventory_extended.inventory_extended_gen_price_action)d" type="action" context="{'default_product_id' : active_id, 'updated' : False}"/>
+                    <button string="Generate Price" name="%(inventory_extended.inventory_extended_gen_price_action)d" type="action" context="{'default_product_id' : active_id}"/>
                 </xpath>
             </field>
         </record>
